# CHW_MVP

./: .gitignore  DMN_CSV_INTEGRATION_GUIDE.md  DMN_CSV_README.md  Grading rubric WHO 2012 ChatGPT (1).xlsx - Rubric .csv  LAB_NOTEBOOK.md  README.md  README_DMN_CSV_Processor.md  chatbot_session_default.json  chatbot_test_result.json  create_sample_dmn_csvs.py  custom_openai_system_prompt.md  dmn_aggregate_final.csv  dmn_module_a.csv  dmn_module_b.csv  dmn_module_c.csv  dmn_module_d.csv  dmn_module_e.csv  dmn_processing_summary.md  generate_fixed_artifacts.py  generate_fixed_artifacts_simple.py  process_dmn_csv.py  process_dmn_modules.sh  run_openai_v2_chatbot.py  setup_dmn_instances.sh  test_fixed_chatbot.py
chatchw/: .gitignore  README.md  input.encounter.example.json  pyproject.toml  refined_who_chw_extracted.json  requirements.txt
chatchw/chatchw/: bpmn_builder.py  bpmn_parser.py  chatbot_engine.py  cli.py  csv_export.py  disable_net.py  dmn_builder.py  dmn_parser.py  dmn_viz.py  dynamic_chatbot_engine.py  engine.py  flowchart_generator.py  guarded_extractor.py  make_media_only.py  openai_extractor.py  openai_extractor_guarded.py  openai_extractor_refined.py  orchestrator_v5.xlsx  pdf_parser.py  question_generator.py  resolver.py  rules_loader.py  run_guarded.py  sandbox_fs.py  schema.py  text_processor.py  validator.py
chatchw/chatchw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
chatchw/chatchw/.chatchw_debug/: bpmn_debug_last.txt  dmn_ask_debug_last.txt  fact_sheet.json  guarded_debug_last.txt  pydantic_ir_validation_error.txt  (+1 more)
chatchw/tests/: test_boundaries.py  test_cli.py  test_danger_signs.py  test_render_bpmn_dmn.py
(+48 files in other folders)
