[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatchw"
version = "0.1.0"
description = "ChatCHW v0.1 - Offline, sandboxed CLI MVP that generates BPMN/DMN and runs deterministic rules."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "ChatCHW Team" }]
license = { text = "MIT" }
dependencies = [
  "typer==0.12.3",
  "pydantic==2.7.1",
  "python-dateutil==2.9.0.post0",
  "rfc3339-validator==0.1.4",
  "pm4py==2.7.11",
  "graphviz==0.20.3",
  "pytest==8.3.2",
  "hypothesis==6.108.5"
]

[project.scripts]
chatchw = "chatchw.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["chatchw*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

