[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatchw"
version = "0.1.0"
description = "ChatCHW v0.1 - Offline CLI MVP that generates BPMN/DMN and runs deterministic rules."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ChatCHW Team" }]
license = { text = "MIT" }
dependencies = [
  "typer>=0.9.0",
  "pydantic>=2.0.0",
  "pm4py>=2.7.0",
  "graphviz>=0.20.0",
  "pytest>=7.0.0",
  "pypdf>=3.0.0",
  "regex>=2023.0.0",
  "matplotlib>=3.0.0",
  "networkx>=2.0.0",
  "openai>=1.0.0"
]

[project.scripts]
chatchw = "chatchw.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["chatchw*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
